Fixed Links bug that caused offcentering.

--- a/style.css
+++ b/style.css
@@ -79,8 +79,6 @@ a {
   content: "";
   position: absolute;
   top: 0;
-  left: 5%;
-  right: 5%;
   width: 90%;
   height: 1px;
   background-image: linear-gradient(to right, transparent, rgb(48, 49, 51), transparent);
